# RobotProgrammingProject

./: README.md
install/: local_setup.sh  setup.sh
install/Stage/lib/: libstage.so.4.3.0
install/Stage/lib/pkgconfig/: stage.pc
install/Stage/share/stage/: package.sh
install/configuration/share/ament_index/resource_index/parent_prefix_path/: configuration
install/configuration/share/configuration/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simple_planner/share/ament_index/resource_index/package_run_dependencies/: simple_planner
install/simple_planner/share/simple_planner/: local_setup.dsv
install/simple_planner/share/simple_planner/config/: all_params.yaml  amcl.yaml  bt_navigator.yaml  controller_server.yaml
install/stage_ros2/share/stage_ros2/: package.sh
install/worlds/share/worlds/: local_setup.dsv  local_setup.sh  package.xml
src/Stage/: README.md
src/simple_planner/: CMakeLists.txt  package.xml
src/simple_planner/config/: bt.xml  params.yaml  visualization.rviz
src/simple_planner/install/: local_setup.sh  setup.sh
src/simple_planner/install/simple_planner/share/simple_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/simple_planner/launch/: planner_launch.xml
src/simple_planner/src/: distance_map.cpp  search.cpp  search.hpp  simple_planner.cpp  utils.cpp  utils.hpp
src/stage_ros2/: README.md
src/worlds/: package.xml
src/worlds/src/cappero/: cappero_laser_odom_diag.world  cappero_laser_odom_diag.yaml
